--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -16,4 +16,4 @@
 <hr>
 
 <h1>Event Binding</h1>
-<app-event-binding></app-event-binding>
+<app-event-binding (clicked)="onCustomClicked($event)"></app-event-binding>
