Changing input, output property names by putting new name in parenthesis
Change-Id: Ide38010623a88ff3bd2f6e3e3fdd1cf1a171323c
Signed-off-by: Akash Garg <akash.garg@sap.com>

--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -16,4 +16,4 @@
 <hr>
 
 <h1>Event Binding</h1>
-<app-event-binding (clicked)="onCustomClicked($event)"></app-event-binding>
+<app-event-binding (clickable)="onCustomClicked($event)"></app-event-binding>
