--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -17,3 +17,6 @@
 
 <h1>Event Binding</h1>
 <app-event-binding (clickable)="onCustomClicked($event)"></app-event-binding>
+<hr>
+
+<app-two-way-binding></app-two-way-binding>
